[gd_scene load_steps=5 format=2]

[ext_resource path="res://Spikes/SteelspikeUp.png" type="Texture" id=1]
[ext_resource path="res://Spike.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 45.5961

[sub_resource type="Animation" id=2]
resource_name = "Spike"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Spike:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -45 ) ]
}

[node name="Spike" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Spike" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Spike"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Spike"]
polygon = PoolVector2Array( 8.38014, 21.0409, -8.7374, 21.3215, -0.0383224, -20.7708 )

[node name="Spring" type="Area2D" parent="Spike"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spike/Spring"]
shape = SubResource( 1 )

[node name="Hit" type="Area2D" parent="Spike"]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Spike/Hit"]
polygon = PoolVector2Array( 8.38014, 21.0409, -8.7374, 21.3215, -0.0383224, -20.7708 )

[node name="SpikeAnim" type="AnimationPlayer" parent="."]
anims/Spike = SubResource( 2 )
[connection signal="area_entered" from="Spike/Spring" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Spike/Spring" to="." method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="Spike/Hit" to="." method="_on_Hit_area_entered"]
